[package]
name = "clientmaps-to-mapdat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = [ "derive" ] }
anyhow = "1.0.95"

serde = { version = "1.0.217", features = [ "derive" ] }
uuid = { version = "1.12.1", features = ["v4"] }
rayon = "1.10.0"
fastnbt = "2.5.0"
flate2 = "1.0.35"